--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
         <div id="landing" class="screen active">
             <div class="landing-content">
                 <div class="emoji-header">🛠️</div>
-                <h1>What Kind of Ramp Builder Are You?</h1>
+                <h1>What kind of Ramp Builder are you?</h1>
                 <p class="subtitle">Answer 10 quick questions to discover your engineering archetype and the kinds of problems you'd love solving at Ramp.</p>
-                <p class="disclaimer">This is just for fun and self-reflection — it doesn't determine your team placement!</p>
+                <p class="disclaimer">This quiz isn’t a final placement, just a sneak peek at what could be a great fit!
+
+</p>
                 <button id="start-btn" class="btn-primary">Let's Go →</button>
             </div>
         </div>
