--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
         <!-- Landing Page -->
         <div id="landing" class="screen active">
             <div class="landing-content">
-                <img src="ramp-logo.svg" alt="Ramp" class="logo" />
+                <img src="Ramp-Lockup-RGB-White.png" alt="Ramp" class="logo" />
                 <div class="emoji-header">🛠️</div>
                 <h1>What Kind of Ramp Builder Are You?</h1>
                 <p class="subtitle">Answer 10 quick questions to discover your engineering archetype and the kinds of problems you'd love solving at Ramp.</p>
