--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
             <div class="landing-content">
                 <img src="Ramp-Lockup-RGB-White.png" alt="Ramp" class="logo" />
                 <div class="emoji-header">🛠️</div>
-                <h1>What Kind of Ramp Builder Are You?</h1>
+                <h1>What kind of Ramp Builder are you?</h1>
                 <p class="subtitle">Answer 10 quick questions to discover your engineering archetype and the kinds of problems you'd love solving at Ramp.</p>
                 <p class="disclaimer">This is just for fun and self-reflection — it doesn't determine your team placement!</p>
                 <button id="start-btn" class="btn-primary">Let's Go →</button>
@@ -594,7 +594,7 @@
                     <button id="copy-btn" class="btn-copy">📋 Copy My Result</button>
                     <button id="retake-btn" class="btn-secondary">Retake Quiz</button>
                 </div>
-                <p class="final-disclaimer">Remember: this quiz is a fun reflection tool, not a placement decision. Your recruiter and team will work with you to find the best fit!</p>
+                <p class="final-disclaimer">Remember: This quiz is a fun reflection tool, not a placement decision. Your recruiter and team will work with you to find the best fit!</p>
             </div>
         </div>
     </div>
