--- a/index.html
+++ b/index.html
@@ -1019,7 +1019,7 @@
         var top = archetypes[entries[0][0]];
         var runnerUp = archetypes[entries[1][0]];
 
-        var text = "I took the 'What Kind of Ramp Builder Are You?' quiz!\n\n" +
+        var text = "I took the 'What kind of Ramp Builder are you?' quiz!\n\n" +
             top.emoji + " I\u2019m " + getIndefiniteArticle(top.name) + " " + top.name + "!\n" +
             top.tagline + "\n\n" +
             "Runner-up: " + runnerUp.emoji + " " + runnerUp.name + "\n" +
