--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>What kind of Ramp Builder are you?</title>
+    <title>What kind of Builder are you?</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
@@ -561,7 +561,7 @@
             <div class="landing-content">
                 <img src="Ramp-Lockup-RGB-White.png" alt="Ramp" class="logo" />
                 <div class="emoji-header">🛠️</div>
-                <h1>What kind of Ramp Builder are you?</h1>
+                <h1>What kind of Builder are you?</h1>
                 <p class="subtitle">Answer 10 quick questions to discover your engineering archetype and the kinds of problems you'd love solving at Ramp.</p>
                 <p class="disclaimer">This is just for fun and self-reflection — it doesn't determine your team placement!</p>
                 <button id="start-btn" class="btn-primary">Let's Go →</button>
@@ -1019,7 +1019,7 @@
         var top = archetypes[entries[0][0]];
         var runnerUp = archetypes[entries[1][0]];
 
-        var text = "I took the 'What kind of Ramp Builder are you?' quiz!\n\n" +
+        var text = "I took the 'What kind of Builder are you?' quiz!\n\n" +
             top.emoji + " I\u2019m " + getIndefiniteArticle(top.name) + " " + top.name + "!\n" +
             top.tagline + "\n\n" +
             "Runner-up: " + runnerUp.emoji + " " + runnerUp.name + "\n" +
