--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
         <div id="landing" class="screen active">
             <div class="landing-content">
                 <img src="Ramp-Lockup-RGB-White.png" alt="Ramp" class="logo" />
-                <div class="emoji-header">🛠️</div>
+                <img src="builder-icon.png" alt="Builder" class="builder-icon" />
                 <h1>What kind of Builder are you?</h1>
                 <p class="subtitle">Answer 10 quick questions to discover your engineering archetype and the kinds of problems you'd love solving at Ramp.</p>
                 <p class="disclaimer">This is just for fun and self-reflection — it doesn't determine your team placement!</p>
