--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
         <!-- Landing Page -->
         <div id="landing" class="screen active">
             <div class="landing-content">
-                <img src="ramp-logo.svg" alt="Ramp" class="logo" />
+                <img src="Ramp-Lockup-RGB-White.png" alt="Ramp" class="logo" />
                 <img src="builder-icon.png" alt="Builder" class="builder-icon" />
                 <h1>What kind of Builder are you?</h1>
                 <p class="subtitle">Answer 10 quick questions to discover your engineering archetype and the kinds of problems you'd love solving at Ramp.</p>
